--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         
         html, body {
             height: 100%;
+            background-image: url('wdyr.png');
+            background-repeat: repeat;
             background-color: black;
             color: white;
             font-family: Arial, sans-serif;
@@ -35,6 +37,6 @@
     </style>
 </head>
 <body>
-    <div class="gotcha-text">GOTCHA</div>
+    <div class="gotcha-text">WHY DID YOU REDEEM</div>
 </body>
 </html>
