--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #85D8D4 0%, #1F087B 100%);
+            background: linear-gradient(135deg, #B495FF 0%, #85D8D4 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
